cursive-bootstrap/tests/ui/E-CON/E-CON-0005.cursive
// RUN: compile-fail
// DIAG: E-CON-0005
// SPEC: 8.9
// DESC: Write access required but only Read available

record Counter {
    value: i32
}

procedure write_with_read(c: shared Counter) -> () {
    # c {
        c.value = 10  //~ ERROR E-CON-0005: write access required
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
